# ded-2018

./: CMakeLists.txt  LICENSE  README.md
oneginator/: CMakeLists.txt  main.cpp  text.cpp  text.h
sq-solver/: CMakeLists.txt  main.cpp  sq_solver_ut.cpp  square_equation_solver.cpp  square_equation_solver.h
test/: CMakeLists.txt  my_test.cpp  my_test.h
util/: CMakeLists.txt  containers.h  file.cpp  file.h  util.cpp  util.h
